--- a/app/App.css
+++ b/app/App.css
@@ -1,15 +1,40 @@
-body {
-	background: #141414;
-	color: #ffffff;
+
+
+.App {
+  text-align: center;
 }
-.App{
-text-align: center;
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
-.App-logo{
-    height:40vmin;
-    pointer-events: none;
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
-.movie-app > .row {
-	overflow-x: auto;
-	flex-wrap: nowrap;
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
